// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExtensionsPicker /> renders the ExtensionsPicker correctly 1`] = `
<DocumentFragment>
  <div
    aria-label="Extensions picker"
    class="extensions-picker"
  >
    <div
      class="control-container"
    >
      <div
        class="search-bar responsive-container"
      >
        <div
          class="form-group"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            />
          </svg>
          <input
            aria-label="Search extensions"
            autocomplete="off"
            class="extensions-search-input form-control"
            id="extensions-search-input"
            placeholder=""
            type="search"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="main-container responsive-container"
    >
      <div
        class="extension-list-wrapper"
      >
        <div
          class="extension-category"
        >
          Core
        </div>
        <div
          class="extension-row"
        >
          <div
            aria-label="Switch io.quarkus:quarkus-arc extension"
            class="extension-selector"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
              />
            </svg>
          </div>
          <div
            class="extension-summary"
          >
            <span
              class="extension-name"
              title="ArC (test-version)"
            >
              ArC
            </span>
            <span
              class="extension-id"
              title="io.quarkus:quarkus-arc"
            >
              [quarkus-arc]
            </span>
          </div>
          <div
            class="extension-description"
            title="Build time CDI dependency injection"
          >
            Build time CDI dependency injection
          </div>
          <div
            class="extension-more"
          >
            <div
              class="dropdown"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="extension-more-button dropdown-toggle btn btn-primary"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="extension-category"
        >
          Cloud
        </div>
        <div
          class="extension-row"
        >
          <div
            aria-label="Switch some-id extension"
            class="extension-selector"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
              />
            </svg>
          </div>
          <div
            class="extension-summary"
          >
            <span
              class="extension-name"
              title="A CDI in name test (test-version)"
            >
              A CDI in name test
            </span>
            <span
              class="extension-id"
              title="some-id"
            >
              []
            </span>
            <div
              class="extension-tag-dropdown dropdown"
              delay="[object Object]"
              placement="right"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="extension-tag experimental dropdown-toggle"
                style="border-color: #ff004a;"
              >
                <span>
                  EXPERIMENTAL
                </span>
              </div>
            </div>
          </div>
          <div
            class="extension-description"
            title="Some description"
          >
            Some description
          </div>
          <div
            class="extension-more"
          >
            <div
              class="dropdown"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="extension-more-button dropdown-toggle btn btn-primary"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="extension-category"
        >
          Integration
        </div>
        <div
          class="extension-row"
        >
          <div
            aria-label="Switch io.quarkus:quarkus-camel-netty4-http extension"
            class="extension-selector"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
              />
            </svg>
          </div>
          <div
            class="extension-summary"
          >
            <span
              class="extension-name"
              title="Camel Netty4 test HTTP (test-version)"
            >
              Camel Netty4 test HTTP
            </span>
            <span
              class="extension-id"
              title="io.quarkus:quarkus-camel-netty4-http"
            >
              [quarkus-camel-netty4-http]
            </span>
            <div
              class="extension-tag-dropdown dropdown"
              delay="[object Object]"
              placement="right"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="extension-tag preview dropdown-toggle"
                style="border-color: #4695eb;"
              >
                <span>
                  PREVIEW
                </span>
              </div>
            </div>
          </div>
          <div
            class="extension-description"
            title="Camel support for Netty"
          >
            Camel support for Netty
          </div>
          <div
            class="extension-more"
          >
            <div
              class="dropdown"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="extension-more-button dropdown-toggle btn btn-primary"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ExtensionsPicker /> select values and save 1`] = `
<DocumentFragment>
  <div
    aria-label="Extensions picker"
    class="extensions-picker"
  >
    <div
      class="control-container"
    >
      <div
        class="search-bar responsive-container"
      >
        <div
          class="form-group"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            />
          </svg>
          <input
            aria-label="Search extensions"
            autocomplete="off"
            class="extensions-search-input form-control"
            id="extensions-search-input"
            placeholder=""
            type="search"
            value="netty"
          />
        </div>
      </div>
    </div>
    <div
      class="main-container responsive-container"
    >
      <div
        class="extension-search-clear"
      >
        Search results (
        <a
          class="btn btn-primary"
        >
          Clear search
        </a>
        )
      </div>
      <div
        class="extension-list-wrapper"
      >
        <div
          class="extension-row"
        >
          <div
            aria-label="Switch io.quarkus:quarkus-camel-netty4-http extension"
            class="extension-selector"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
              />
            </svg>
          </div>
          <div
            class="extension-summary"
          >
            <span
              class="extension-name"
              title="Camel Netty4 test HTTP (test-version)"
            >
              Camel Netty4 test HTTP
            </span>
            <span
              class="extension-id"
              title="io.quarkus:quarkus-camel-netty4-http"
            >
              [quarkus-camel-netty4-http]
            </span>
            <div
              class="extension-tag-dropdown dropdown"
              delay="[object Object]"
              placement="right"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="extension-tag preview dropdown-toggle"
                style="border-color: #4695eb;"
              >
                <span>
                  PREVIEW
                </span>
              </div>
            </div>
          </div>
          <div
            class="extension-description"
            title="Camel support for Netty"
          >
            Camel support for Netty
          </div>
          <div
            class="extension-more"
          >
            <div
              class="dropdown"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="extension-more-button dropdown-toggle btn btn-primary"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ExtensionsPicker /> show results for valid search 1`] = `
<DocumentFragment>
  <div
    aria-label="Extensions picker"
    class="extensions-picker"
  >
    <div
      class="control-container"
    >
      <div
        class="search-bar responsive-container"
      >
        <div
          class="form-group"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            />
          </svg>
          <input
            aria-label="Search extensions"
            autocomplete="off"
            class="extensions-search-input form-control"
            id="extensions-search-input"
            placeholder=""
            type="search"
            value="CDI"
          />
        </div>
      </div>
    </div>
    <div
      class="main-container responsive-container"
    >
      <div
        class="extension-search-clear"
      >
        Search results (
        <a
          class="btn btn-primary"
        >
          Clear search
        </a>
        )
      </div>
      <div
        class="extension-list-wrapper"
      >
        <div
          class="extension-row"
        >
          <div
            aria-label="Switch io.quarkus:quarkus-arc extension"
            class="extension-selector"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
              />
            </svg>
          </div>
          <div
            class="extension-summary"
          >
            <span
              class="extension-name"
              title="ArC (test-version)"
            >
              ArC
            </span>
            <span
              class="extension-id"
              title="io.quarkus:quarkus-arc"
            >
              [quarkus-arc]
            </span>
          </div>
          <div
            class="extension-description"
            title="Build time CDI dependency injection"
          >
            Build time CDI dependency injection
          </div>
          <div
            class="extension-more"
          >
            <div
              class="dropdown"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="extension-more-button dropdown-toggle btn btn-primary"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="extension-row"
        >
          <div
            aria-label="Switch some-id extension"
            class="extension-selector"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 448 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
              />
            </svg>
          </div>
          <div
            class="extension-summary"
          >
            <span
              class="extension-name"
              title="A CDI in name test (test-version)"
            >
              A CDI in name test
            </span>
            <span
              class="extension-id"
              title="some-id"
            >
              []
            </span>
            <div
              class="extension-tag-dropdown dropdown"
              delay="[object Object]"
              placement="right"
            >
              <div
                aria-expanded="false"
                aria-haspopup="true"
                class="extension-tag experimental dropdown-toggle"
                style="border-color: #ff004a;"
              >
                <span>
                  EXPERIMENTAL
                </span>
              </div>
            </div>
          </div>
          <div
            class="extension-description"
            title="Some description"
          >
            Some description
          </div>
          <div
            class="extension-more"
          >
            <div
              class="dropdown"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="extension-more-button dropdown-toggle btn btn-primary"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
